Post method completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<html>
-<h1> {{quoteObject.status}} </h1>
-<h1> {{quoteObject.error}} </h1>
-</html>
+<div>  
+  <input type="text" [(ngModel)]="dataToPost.poo" />
+  <input type="text" [(ngModel)]="dataToPost.fd" />
+  
+  <button (click)='changeCase()'>Change Upper</button>
+  
+   <h1>{{ quoteObject.status }}</h1>
+</div>  
